--- a/src/app/modules/admin/apps/users/details/details.component.html
+++ b/src/app/modules/admin/apps/users/details/details.component.html
@@ -6,10 +6,10 @@
         <!-- Header -->
         <div class="relative w-full h-40 sm:h-48 px-8 sm:px-12 bg-accent-100 dark:bg-accent-700">
             <!-- Background -->
-            <ng-container *ngIf="contact.background">
+            <ng-container *ngIf="user.background">
                 <img
                     class="absolute inset-0 object-cover w-full h-full"
-                    [src]="contact.background">
+                    [src]="user.background">
             </ng-container>
             <!-- Close button -->
             <div class="flex items-center justify-end w-full max-w-3xl mx-auto pt-6">
@@ -24,7 +24,7 @@
             </div>
         </div>
 
-        <!-- Contact -->
+        <!-- User -->
         <div class="relative flex flex-col flex-auto items-center p-6 pt-0 sm:p-12 sm:pt-0">
             <div class="w-full max-w-3xl">
 
@@ -34,12 +34,12 @@
                     <div class="flex items-center justify-center w-32 h-32 rounded-full overflow-hidden ring-4 ring-bg-card">
                         <img
                             class="object-cover w-full h-full"
-                            *ngIf="contact.avatar"
-                            [src]="contact.avatar">
+                            *ngIf="user.avatar"
+                            [src]="user.avatar">
                         <div
                             class="flex items-center justify-center w-full h-full rounded overflow-hidden uppercase text-8xl font-bold leading-none bg-gray-200 text-gray-600 dark:bg-gray-700 dark:text-gray-200"
-                            *ngIf="!contact.avatar">
-                            {{contact.name.charAt(0)}}
+                            *ngIf="!user.avatar">
+                            {{user.name.charAt(0)}}
                         </div>
                     </div>
                     <!-- Actions -->
@@ -56,13 +56,13 @@
                 </div>
 
                 <!-- Name -->
-                <div class="mt-3 text-4xl font-bold truncate">{{contact.name}}</div>
+                <div class="mt-3 text-4xl font-bold truncate">{{user.name}}</div>
 
                 <!-- Tags -->
-                <ng-container *ngIf="contact.tags.length">
+                <ng-container *ngIf="user.tags.length">
                     <div class="flex flex-wrap items-center mt-2">
                         <!-- Tag -->
-                        <ng-container *ngFor="let tag of (contact.tags | fuseFindByKey:'id':tags); trackBy: trackByFn">
+                        <ng-container *ngFor="let tag of (user.tags | fuseFindByKey:'id':tags); trackBy: trackByFn">
                             <div class="flex items-center justify-center py-1 px-3 mr-3 mb-3 rounded-full leading-normal text-gray-500 bg-gray-100 dark:text-gray-300 dark:bg-gray-700">
                                 <span class="text-sm font-medium whitespace-nowrap">{{tag.title}}</span>
                             </div>
@@ -72,27 +72,27 @@
 
                 <div class="flex flex-col mt-4 pt-6 border-t space-y-8">
                     <!-- Title -->
-                    <ng-container *ngIf="contact.title">
+                    <ng-container *ngIf="user.title">
                         <div class="flex sm:items-center">
                             <mat-icon [svgIcon]="'heroicons_outline:briefcase'"></mat-icon>
-                            <div class="ml-6 leading-6">{{contact.title}}</div>
+                            <div class="ml-6 leading-6">{{user.title}}</div>
                         </div>
                     </ng-container>
 
                     <!-- Company -->
-                    <ng-container *ngIf="contact.company">
+                    <ng-container *ngIf="user.company">
                         <div class="flex sm:items-center">
                             <mat-icon [svgIcon]="'heroicons_outline:office-building'"></mat-icon>
-                            <div class="ml-6 leading-6">{{contact.company}}</div>
+                            <div class="ml-6 leading-6">{{user.company}}</div>
                         </div>
                     </ng-container>
 
                     <!-- Emails -->
-                    <ng-container *ngIf="contact.emails.length">
+                    <ng-container *ngIf="user.emails.length">
                         <div class="flex">
                             <mat-icon [svgIcon]="'heroicons_outline:mail'"></mat-icon>
                             <div class="min-w-0 ml-6 space-y-1">
-                                <ng-container *ngFor="let email of contact.emails; trackBy: trackByFn">
+                                <ng-container *ngFor="let email of user.emails; trackBy: trackByFn">
                                     <div class="flex items-center leading-6">
                                         <a
                                             class="hover:underline text-primary-500"
@@ -113,16 +113,16 @@
                     </ng-container>
 
                     <!-- Phone -->
-                    <ng-container *ngIf="contact.phoneNumbers.length">
+                    <ng-container *ngIf="user.phoneNumbers.length">
                         <div class="flex">
                             <mat-icon [svgIcon]="'heroicons_outline:phone'"></mat-icon>
                             <div class="min-w-0 ml-6 space-y-1">
-                                <ng-container *ngFor="let phoneNumber of contact.phoneNumbers; trackBy: trackByFn">
+                                <ng-container *ngFor="let phoneNumber of user.phoneNumbers; trackBy: trackByFn">
                                     <div class="flex items-center leading-6">
                                         <div
                                             class="hidden sm:flex w-6 h-4 overflow-hidden"
                                             [matTooltip]="getCountryByIso(phoneNumber.country).name"
-                                            [style.background]="'url(\'/assets/images/apps/contacts/flags.png\') no-repeat 0 0'"
+                                            [style.background]="'url(\'/assets/images/apps/users/flags.png\') no-repeat 0 0'"
                                             [style.backgroundSize]="'24px 3876px'"
                                             [style.backgroundPosition]="getCountryByIso(phoneNumber.country).flagImagePos"></div>
                                         <div class="sm:ml-3 font-mono">{{getCountryByIso(phoneNumber.country).code}}</div>
@@ -140,28 +140,28 @@
                     </ng-container>
 
                     <!-- Address -->
-                    <ng-container *ngIf="contact.address">
+                    <ng-container *ngIf="user.address">
                         <div class="flex sm:items-center">
                             <mat-icon [svgIcon]="'heroicons_outline:location-marker'"></mat-icon>
-                            <div class="ml-6 leading-6">{{contact.address}}</div>
+                            <div class="ml-6 leading-6">{{user.address}}</div>
                         </div>
                     </ng-container>
 
                     <!-- Birthday -->
-                    <ng-container *ngIf="contact.birthday">
+                    <ng-container *ngIf="user.birthday">
                         <div class="flex sm:items-center">
                             <mat-icon [svgIcon]="'heroicons_outline:cake'"></mat-icon>
-                            <div class="ml-6 leading-6">{{contact.birthday | date:'longDate'}}</div>
+                            <div class="ml-6 leading-6">{{user.birthday | date:'longDate'}}</div>
                         </div>
                     </ng-container>
 
                     <!-- Notes -->
-                    <ng-container *ngIf="contact.notes">
+                    <ng-container *ngIf="user.notes">
                         <div class="flex">
                             <mat-icon [svgIcon]="'heroicons_outline:menu-alt-2'"></mat-icon>
                             <div
                                 class="max-w-none ml-6 prose prose-sm"
-                                [innerHTML]="contact.notes"></div>
+                                [innerHTML]="user.notes"></div>
                         </div>
                     </ng-container>
                 </div>
@@ -176,10 +176,10 @@
         <!-- Header -->
         <div class="relative w-full h-40 sm:h-48 px-8 sm:px-12 bg-accent-100 dark:bg-accent-700">
             <!-- Background -->
-            <ng-container *ngIf="contact.background">
+            <ng-container *ngIf="user.background">
                 <img
                     class="absolute inset-0 object-cover w-full h-full"
-                    [src]="contact.background">
+                    [src]="user.background">
             </ng-container>
             <!-- Close button -->
             <div class="flex items-center justify-end w-full max-w-3xl mx-auto pt-6">
@@ -194,10 +194,10 @@
             </div>
         </div>
 
-        <!-- Contact form -->
+        <!-- User form -->
         <div class="relative flex flex-col flex-auto items-center px-6 sm:px-12">
             <div class="w-full max-w-3xl">
-                <form [formGroup]="contactForm">
+                <form [formGroup]="userForm">
 
                     <!-- Avatar -->
                     <div class="flex flex-auto items-end -mt-16">
@@ -236,12 +236,12 @@
                             <!-- Image/Letter -->
                             <img
                                 class="object-cover w-full h-full"
-                                *ngIf="contact.avatar"
-                                [src]="contact.avatar">
+                                *ngIf="user.avatar"
+                                [src]="user.avatar">
                             <div
                                 class="flex items-center justify-center w-full h-full rounded overflow-hidden uppercase text-8xl font-bold leading-none bg-gray-200 text-gray-600 dark:bg-gray-700 dark:text-gray-200"
-                                *ngIf="!contact.avatar">
-                                {{contact.name.charAt(0)}}
+                                *ngIf="!user.avatar">
+                                {{user.name.charAt(0)}}
                             </div>
                         </div>
                     </div>
@@ -265,8 +265,8 @@
                     <!-- Tags -->
                     <div class="flex flex-wrap items-center -m-1.5 mt-6">
                         <!-- Tags -->
-                        <ng-container *ngIf="contact.tags.length">
-                            <ng-container *ngFor="let tag of (contact.tags | fuseFindByKey:'id':tags); trackBy: trackByFn">
+                        <ng-container *ngIf="user.tags.length">
+                            <ng-container *ngFor="let tag of (user.tags | fuseFindByKey:'id':tags); trackBy: trackByFn">
                                 <div class="flex items-center justify-center px-4 m-1.5 rounded-full leading-9 text-gray-500 bg-gray-100 dark:text-gray-300 dark:bg-gray-700">
                                     <span class="text-md font-medium whitespace-nowrap">{{tag.title}}</span>
                                 </div>
@@ -278,14 +278,14 @@
                             (click)="openTagsPanel()"
                             #tagsPanelOrigin>
 
-                            <ng-container *ngIf="contact.tags.length">
+                            <ng-container *ngIf="user.tags.length">
                                 <mat-icon
                                     class="icon-size-5"
                                     [svgIcon]="'heroicons_solid:pencil-alt'"></mat-icon>
                                 <span class="ml-1.5 text-md font-medium whitespace-nowrap">Edit</span>
                             </ng-container>
 
-                            <ng-container *ngIf="!contact.tags.length">
+                            <ng-container *ngIf="!user.tags.length">
                                 <mat-icon
                                     class="icon-size-5"
                                     [svgIcon]="'heroicons_solid:plus-circle'"></mat-icon>
@@ -333,11 +333,11 @@
                                             <ng-container *ngFor="let tag of filteredTags; trackBy: trackByFn">
                                                 <div
                                                     class="flex items-center h-10 min-h-10 px-4 cursor-pointer hover:bg-hover"
-                                                    (click)="toggleContactTag(tag)"
+                                                    (click)="toggleUserTag(tag)"
                                                     matRipple>
                                                     <mat-checkbox
                                                         class="flex items-center h-10 min-h-10 pointer-events-none"
-                                                        [checked]="contact.tags.includes(tag.id)"
+                                                        [checked]="user.tags.includes(tag.id)"
                                                         [color]="'primary'"
                                                         [disableRipple]="true">
                                                     </mat-checkbox>
@@ -418,7 +418,7 @@
                     <!-- Emails -->
                     <div class="mt-8">
                         <div class="space-y-4">
-                            <ng-container *ngFor="let email of contactForm.get('emails')['controls']; let i = index; let first = first; let last = last; trackBy: trackByFn">
+                            <ng-container *ngFor="let email of userForm.get('emails')['controls']; let i = index; let first = first; let last = last; trackBy: trackByFn">
                                 <div class="flex">
                                     <mat-form-field class="fuse-mat-no-subscript flex-auto">
                                         <mat-label *ngIf="first">Email</mat-label>
@@ -475,7 +475,7 @@
                     <!-- Phone numbers -->
                     <div class="mt-8">
                         <div class="space-y-4">
-                            <ng-container *ngFor="let phoneNumber of contactForm.get('phoneNumbers')['controls']; let i = index; let first = first; let last = last; trackBy: trackByFn">
+                            <ng-container *ngFor="let phoneNumber of userForm.get('phoneNumbers')['controls']; let i = index; let first = first; let last = last; trackBy: trackByFn">
                                 <div class="relative flex">
                                     <mat-form-field class="fuse-mat-no-subscript flex-auto">
                                         <mat-label *ngIf="first">Phone</mat-label>
@@ -491,7 +491,7 @@
                                                 <span class="flex items-center">
                                                     <span
                                                         class="hidden sm:flex w-6 h-4 mr-1 overflow-hidden"
-                                                        [style.background]="'url(\'/assets/images/apps/contacts/flags.png\') no-repeat 0 0'"
+                                                        [style.background]="'url(\'/assets/images/apps/users/flags.png\') no-repeat 0 0'"
                                                         [style.backgroundSize]="'24px 3876px'"
                                                         [style.backgroundPosition]="getCountryByIso(phoneNumber.get('country').value).flagImagePos"></span>
                                                     <span class="sm:mx-0.5 font-medium text-default">{{getCountryByIso(phoneNumber.get('country').value).code}}</span>
@@ -502,7 +502,7 @@
                                                     <span class="flex items-center">
                                                         <span
                                                             class="w-6 h-4 overflow-hidden"
-                                                            [style.background]="'url(\'/assets/images/apps/contacts/flags.png\') no-repeat 0 0'"
+                                                            [style.background]="'url(\'/assets/images/apps/users/flags.png\') no-repeat 0 0'"
                                                             [style.backgroundSize]="'24px 3876px'"
                                                             [style.backgroundPosition]="country.flagImagePos"></span>
                                                         <span class="ml-2">{{country.name}}</span>
@@ -613,7 +613,7 @@
                             mat-button
                             [color]="'warn'"
                             [matTooltip]="'Delete'"
-                            (click)="deleteContact()">
+                            (click)="deleteUser()">
                             Delete
                         </button>
                         <!-- Cancel -->
@@ -629,9 +629,9 @@
                             class="ml-2"
                             mat-flat-button
                             [color]="'primary'"
-                            [disabled]="contactForm.invalid"
+                            [disabled]="userForm.invalid"
                             [matTooltip]="'Save'"
-                            (click)="updateContact()">
+                            (click)="updateUser()">
                             Save
                         </button>
                     </div>
