--- a/src/app/modules/admin/apps/users/list/list.component.html
+++ b/src/app/modules/admin/apps/users/list/list.component.html
@@ -74,7 +74,9 @@
                                 <!-- Group -->
                                 <ng-container *ngIf="i === 0 || user.name.charAt(0) !== users[i - 1].name.charAt(0)">
                                     <div class="z-10 sticky top-0 -mt-px px-6 py-1 md:px-8 border-t border-b font-medium uppercase text-secondary bg-gray-50 dark:bg-gray-900">
-                                        {{user.name.charAt(0)}}
+                                        <div *ngIf="user.name !== undefined && user.name.length > 0">
+                                            {{user.name.charAt(0)}}
+                                        </div>
                                     </div>
                                 </ng-container>
                                 <!-- User -->
@@ -92,13 +94,15 @@
                                         </ng-container>
                                         <ng-container *ngIf="!user.avatar">
                                             <div class="flex items-center justify-center w-full h-full rounded-full text-lg uppercase bg-gray-200 text-gray-600 dark:bg-gray-700 dark:text-gray-200">
-                                                {{user.name.charAt(0)}}
+                                                <div *ngIf="user.name !== undefined && user.name.length > 0">
+                                                    {{user.name.charAt(0)}}
+                                                </div>
                                             </div>
                                         </ng-container>
                                     </div>
                                     <div class="min-w-0 ml-4">
                                         <div class="font-medium leading-5 truncate">{{user.name}}</div>
-                                        <div class="leading-5 truncate text-secondary">{{user.title}}</div>
+                                        <div class="ml-6 leading-6">{{ user | profilePipe }}</div>
                                     </div>
                                 </a>
                             </ng-container>
