--- a/src/app/modules/admin/apps/settings/notifications/notifications.component.html
+++ b/src/app/modules/admin/apps/settings/notifications/notifications.component.html
@@ -3,7 +3,7 @@
     <!-- Form -->
     <form [formGroup]="notificationsForm">
 
-        <!-- Section -->
+        <!-- Section -->g
         <div class="w-full text-xl">Alerts</div>
         <div class="grid grid-cols-1 gap-6 w-full mt-8">
             <!-- Communication -->
