Committing afer fixing the margin issue in the users list

--- a/src/app/modules/admin/apps/users/list/list.component.html
+++ b/src/app/modules/admin/apps/users/list/list.component.html
@@ -102,7 +102,7 @@
                                     </div>
                                     <div class="min-w-0 ml-4">
                                         <div class="font-medium leading-5 truncate">{{user.name}}</div>
-                                        <div class="ml-6 leading-6">{{ user | profilePipe }}</div>
+                                        <div class="leading-6">{{ user | profilePipe }}</div>
                                     </div>
                                 </a>
                             </ng-container>
