Committing after working on the Users search control stuff

--- a/src/app/modules/admin/apps/users/details/details.component.html
+++ b/src/app/modules/admin/apps/users/details/details.component.html
@@ -39,8 +39,8 @@
                         <div
                             class="flex items-center justify-center w-full h-full rounded overflow-hidden uppercase text-8xl font-bold leading-none bg-gray-200 text-gray-600 dark:bg-gray-700 dark:text-gray-200"
                             *ngIf="!user.avatar">
-                            <div *ngIf="user.name !== undefined && (!user.name.length > 0)">
-                                {{user.name.charAt(0)}}
+                            <div *ngIf="user.firstName !== undefined && (user.firstName.length > 0)">
+                                {{user.firstName.charAt(0)}}
                             </div>
                         </div>
                     </div>
