--- a/src/app/modules/admin/apps/settings/settings.component.html
+++ b/src/app/modules/admin/apps/settings/settings.component.html
@@ -76,8 +76,8 @@
                 <div class="mt-8">
                     <ng-container [ngSwitch]="selectedPanel">
                         <!-- Account -->
-                        <ng-container *ngSwitchCase="'account'">
-                            <settings-account></settings-account>
+                        <ng-container *ngSwitchCase="'information'">
+                            <settings-information></settings-information>
                         </ng-container>
                         <!-- Security -->
                         <ng-container *ngSwitchCase="'security'">
