The rudimentary settings stuff has been put into place.  The next step will be to enable/disable the tabs and fields

--- a/src/app/modules/admin/apps/settings/settings.component.html
+++ b/src/app/modules/admin/apps/settings/settings.component.html
@@ -83,6 +83,10 @@
                         <ng-container *ngSwitchCase="'security'">
                             <settings-security></settings-security>
                         </ng-container>
+                        <!-- Keys -->
+                        <ng-container *ngSwitchCase="'keys'">
+                            <settings-keys></settings-keys>
+                        </ng-container>
                         <!-- Plan & Billing -->
                         <ng-container *ngSwitchCase="'plan-billing'">
                             <settings-plan-billing></settings-plan-billing>
