--- a/src/app/modules/admin/apps/settings/keys/keys.component.html
+++ b/src/app/modules/admin/apps/settings/keys/keys.component.html
@@ -1,11 +1,11 @@
 <div class="w-full max-w-3xl">
 
     <!-- Form -->
-    <form [formGroup]="securityForm">
+    <form [formGroup]="keysForm">
 
         <!-- Section -->
         <div class="w-full">
-            <div class="text-xl">Change your password</div>
+            <div class="text-xl">Retrieve and Reset your Client App Keys</div>
         </div>
         <div class="grid sm:grid-cols-4 gap-6 w-full mt-8">
             <!-- Current password -->
