--- a/src/app/modules/admin/apps/settings/organization/organization.component.html
+++ b/src/app/modules/admin/apps/settings/organization/organization.component.html
@@ -1,39 +1,23 @@
 <div class="w-full max-w-3xl">
 
-    <!-- Form -->
-    <form [formGroup]="organizationForm">
-
+    <ng-container *ngIf="!editMode">
         <!-- Company Section -->
-        <div class="w-full">
-            <div class="text-xl">Profile</div>
+        <div class="w-full" >
+            <div class="text-xl font-bold">Profile</div>
         </div>
-        <div class="grid sm:grid-cols-4 gap-6 w-full mt-8">
+        <div class="grid sm:grid-cols-4 gap-6 w-full mt-8 ml-8">
             <!-- Company Name -->
-            <div class="sm:col-span-2">
-                <mat-form-field class="fuse-mat-no-subscript w-full">
-                    <mat-label>Company Name</mat-label>
-                    <mat-icon
-                        class="icon-size-5"
-                        [svgIcon]="'heroicons_solid:office-building'"
-                        matPrefix></mat-icon>
-                    <input
-                        [formControlName]="'name'"
-                        matInput>
-                </mat-form-field>
+            <div class="flex flex-row sm:items-center sm:col-span-2">
+                    <mat-icon [svgIcon]="'heroicons_outline:office-building'"></mat-icon>
+                    <mat-label>Company Name:</mat-label>
+                    <div class="ml-6 leading-6">{{settingsOrganization.name}}</div>
             </div>
 
             <!-- Company Website -->
-            <div class="sm:col-span-2">
-                <mat-form-field class="fuse-mat-no-subscript w-full">
-                    <mat-label>Company Website</mat-label>
-                    <mat-icon
-                        class="icon-size-5"
-                        [svgIcon]="'heroicons_solid:link'"
-                        matPrefix></mat-icon>
-                    <input
-                        [formControlName]="'website'"
-                        matInput>
-                </mat-form-field>
+            <div class="flex flex-row sm:items-center sm:col-span-2">
+                <mat-icon [svgIcon]="'heroicons_outline:link'"></mat-icon>
+                <mat-label>Company Website:</mat-label>
+                <div class="ml-6 leading-6">{{settingsOrganization.website}}</div>
             </div>
         </div>
 
@@ -42,36 +26,22 @@
 
         <!-- Contact Information Section -->
         <div class="w-full">
-            <div class="text-xl">Contact Information</div>
+            <div class="text-xl font-bold">Contact Information</div>
         </div>
 
-        <div class="grid sm:grid-cols-4 gap-6 w-full mt-8">
+        <div class="grid sm:grid-cols-4 gap-6 w-full mt-8 ml-8">
             <!-- Company Email -->
-            <div class="sm:col-span-2">
-                <mat-form-field class="fuse-mat-no-subscript w-full">
-                    <mat-label>Company Email</mat-label>
-                    <mat-icon
-                        class="icon-size-5"
-                        [svgIcon]="'heroicons_solid:mail'"
-                        matPrefix></mat-icon>
-                    <input
-                        [formControlName]="'email'"
-                        matInput>
-                </mat-form-field>
+            <div class="flex flex-row sm:items-center sm:col-span-2">
+                <mat-icon [svgIcon]="'heroicons_outline:mail'"></mat-icon>
+                <mat-label>Company Email:</mat-label>
+                <div class="ml-6 leading-6">{{settingsOrganization.email}}</div>
             </div>
 
             <!-- Company Phone -->
-            <div class="sm:col-span-2">
-                <mat-form-field class="fuse-mat-no-subscript w-full">
-                    <mat-label>Company Phone</mat-label>
-                    <mat-icon
-                        class="icon-size-5"
-                        [svgIcon]="'heroicons_solid:phone'"
-                        matPrefix></mat-icon>
-                    <input
-                        [formControlName]="'phone'"
-                        matInput>
-                </mat-form-field>
+            <div class="flex flex-row sm:items-center sm:col-span-2">
+                <mat-icon [svgIcon]="'heroicons_outline:phone'"></mat-icon>
+                <mat-label>Company Phone:</mat-label>
+                <div class="ml-6 leading-6">{{settingsOrganization.phone}}</div>
             </div>
         </div>
 
@@ -80,92 +50,217 @@
 
         <!-- Location Section -->
         <div class="w-full">
-            <div class="text-xl">Location</div>
+            <div class="text-xl font-bold">Location</div>
         </div>
 
-        <div class="grid sm:grid-cols-6 gap-6 w-full mt-8">
+        <div class="grid sm:grid-cols-2 gap-6 w-full mt-8 ml-8">
             <!-- Company Address One -->
-            <div class="sm:col-span-6">
-                <mat-form-field class="fuse-mat-no-subscript w-full">
-                    <mat-label>Company Address One</mat-label>
-                    <mat-icon
-                        class="icon-size-5"
-                        [svgIcon]="'heroicons_solid:location-marker'"
-                        matPrefix></mat-icon>
-                    <input
-                        [formControlName]="'addressOne'"
-                        matInput>
-                </mat-form-field>
+            <div class="flex flex-row sm:items-center sm:col-span-1">
+                <mat-icon [svgIcon]="'heroicons_outline:location-marker'"></mat-icon>
+                <mat-label>Company Address One:</mat-label>
+                <div class="ml-6 leading-6">{{settingsOrganization.addressOne}}</div>
             </div>
 
             <!-- Company Address Two -->
-            <div class="sm:col-span-6">
-                <mat-form-field class="fuse-mat-no-subscript w-full">
-                    <mat-label>Company Address Two</mat-label>
-                    <mat-icon
-                        class="icon-size-5"
-                        [svgIcon]="'heroicons_solid:location-marker'"
-                        matPrefix></mat-icon>
-                    <input
-                        [formControlName]="'addressTwo'"
-                        matInput>
-                </mat-form-field>
+            <div class="flex flex-row sm:items-center sm:col-span-1">
+                <mat-icon [svgIcon]="'heroicons_outline:location-marker'"></mat-icon>
+                <mat-label>Company Address Two:</mat-label>
+                <div class="ml-6 leading-6">{{settingsOrganization.addressTwo}}</div>
             </div>
 
             <!-- Company City -->
-            <div class="sm:col-span-2">
-                <mat-form-field class="fuse-mat-no-subscript w-full">
-                    <mat-label>Company City</mat-label>
-                    <mat-icon
-                        class="icon-size-5"
-                        [svgIcon]="'heroicons_solid:location-marker'"
-                        matPrefix></mat-icon>
-                    <input
-                        [formControlName]="'city'"
-                        matInput>
-                </mat-form-field>
+            <div class="flex flex-row sm:items-center sm:col-span-1">
+                <mat-icon [svgIcon]="'heroicons_outline:location-marker'"></mat-icon>
+                <mat-label>Company City:</mat-label>
+                <div class="ml-6 leading-6">{{settingsOrganization.city}}</div>
             </div>
 
             <!-- Company State -->
-            <div class="sm:col-span-2">
-                <mat-form-field class="fuse-mat-no-subscript w-full">
-                    <mat-label>Company State</mat-label>
-                    <mat-icon
-                        class="icon-size-5"
-                        [svgIcon]="'heroicons_solid:location-marker'"
-                        matPrefix></mat-icon>
-                    <input
-                        [formControlName]="'state'"
-                        matInput>
-                </mat-form-field>
+            <div class="flex flex-row sm:items-center sm:col-span-1">
+                <mat-icon [svgIcon]="'heroicons_outline:location-marker'"></mat-icon>
+                <mat-label>Company State:</mat-label>
+                <div class="ml-6 leading-6">{{settingsOrganization.state}}</div>
             </div>
 
             <!-- Company Country -->
-            <div class="sm:col-span-2">
-                <mat-form-field class="fuse-mat-no-subscript w-full">
-                    <mat-label>Country</mat-label>
-                    <mat-icon
-                        class="icon-size-5"
-                        [svgIcon]="'heroicons_solid:location-marker'"
-                        matPrefix></mat-icon>
-                    <mat-select [formControlName]="'country'">
-                        <mat-option [value]="'usa'">United States</mat-option>
-                        <mat-option [value]="'canada'">Canada</mat-option>
-                        <mat-option [value]="'mexico'">Mexico</mat-option>
-                        <mat-option [value]="'france'">France</mat-option>
-                        <mat-option [value]="'germany'">Germany</mat-option>
-                        <mat-option [value]="'italy'">Italy</mat-option>
-                    </mat-select>
-                </mat-form-field>
+            <div class="flex flex-row sm:items-center sm:col-span-1">
+                <mat-icon [svgIcon]="'heroicons_outline:location-marker'"></mat-icon>
+                <mat-label>Company Country:</mat-label>
+                <div class="ml-6 leading-6">{{settingsOrganization.country}}</div>
             </div>
         </div>
+    </ng-container>
+    <ng-container *ngIf="editMode">
+        <!-- Form -->
+        <form [formGroup]="organizationForm">
 
-        <div class="mt-11 mb-10 border-t"></div>
+            <!-- Company Section -->
+            <div class="w-full">
+                <div class="text-xl">Profile</div>
+            </div>
+            <div class="grid sm:grid-cols-4 gap-6 w-full mt-8 ml-8">
+                <!-- Company Name -->
+                <div class="sm:col-span-2">
+                    <mat-form-field class="fuse-mat-no-subscript w-full">
+                        <mat-label>Company Name</mat-label>
+                        <mat-icon
+                            class="icon-size-5"
+                            [svgIcon]="'heroicons_solid:office-building'"
+                            matPrefix></mat-icon>
+                        <input
+                            [formControlName]="'name'"
+                            matInput>
+                    </mat-form-field>
+                </div>
 
-        <!-- Actions -->
-        <div class="flex items-center justify-end">
+                <!-- Company Website -->
+                <div class="sm:col-span-2">
+                    <mat-form-field class="fuse-mat-no-subscript w-full">
+                        <mat-label>Company Website</mat-label>
+                        <mat-icon
+                            class="icon-size-5"
+                            [svgIcon]="'heroicons_solid:link'"
+                            matPrefix></mat-icon>
+                        <input
+                            [formControlName]="'website'"
+                            matInput>
+                    </mat-form-field>
+                </div>
+            </div>
+
+            <!-- Divider -->
+            <div class="my-5 border-t"></div>
+
+            <!-- Contact Information Section -->
+            <div class="w-full">
+                <div class="text-xl">Contact Information</div>
+            </div>
+
+            <div class="grid sm:grid-cols-4 gap-6 w-full mt-8 ml-8">
+                <!-- Company Email -->
+                <div class="sm:col-span-2">
+                    <mat-form-field class="fuse-mat-no-subscript w-full">
+                        <mat-label>Company Email</mat-label>
+                        <mat-icon
+                            class="icon-size-5"
+                            [svgIcon]="'heroicons_solid:mail'"
+                            matPrefix></mat-icon>
+                        <input
+                            [formControlName]="'email'"
+                            matInput>
+                    </mat-form-field>
+                </div>
+
+                <!-- Company Phone -->
+                <div class="sm:col-span-2">
+                    <mat-form-field class="fuse-mat-no-subscript w-full">
+                        <mat-label>Company Phone</mat-label>
+                        <mat-icon
+                            class="icon-size-5"
+                            [svgIcon]="'heroicons_solid:phone'"
+                            matPrefix></mat-icon>
+                        <input
+                            [formControlName]="'phone'"
+                            matInput>
+                    </mat-form-field>
+                </div>
+            </div>
+
+            <!-- Divider -->
+            <div class="my-5 border-t"></div>
+
+            <!-- Location Section -->
+            <div class="w-full">
+                <div class="text-xl">Location</div>
+            </div>
+
+            <div class="grid sm:grid-cols-6 gap-6 w-full mt-8 ml-8">
+                <!-- Company Address One -->
+                <div class="sm:col-span-6">
+                    <mat-form-field class="fuse-mat-no-subscript w-full">
+                        <mat-label>Company Address One</mat-label>
+                        <mat-icon
+                            class="icon-size-5"
+                            [svgIcon]="'heroicons_solid:location-marker'"
+                            matPrefix></mat-icon>
+                        <input
+                            [formControlName]="'addressOne'"
+                            matInput>
+                    </mat-form-field>
+                </div>
+
+                <!-- Company Address Two -->
+                <div class="sm:col-span-6">
+                    <mat-form-field class="fuse-mat-no-subscript w-full">
+                        <mat-label>Company Address Two</mat-label>
+                        <mat-icon
+                            class="icon-size-5"
+                            [svgIcon]="'heroicons_solid:location-marker'"
+                            matPrefix></mat-icon>
+                        <input
+                            [formControlName]="'addressTwo'"
+                            matInput>
+                    </mat-form-field>
+                </div>
+
+                <!-- Company City -->
+                <div class="sm:col-span-2">
+                    <mat-form-field class="fuse-mat-no-subscript w-full">
+                        <mat-label>Company City</mat-label>
+                        <mat-icon
+                            class="icon-size-5"
+                            [svgIcon]="'heroicons_solid:location-marker'"
+                            matPrefix></mat-icon>
+                        <input
+                            [formControlName]="'city'"
+                            matInput>
+                    </mat-form-field>
+                </div>
+
+                <!-- Company State -->
+                <div class="sm:col-span-2">
+                    <mat-form-field class="fuse-mat-no-subscript w-full">
+                        <mat-label>Company State</mat-label>
+                        <mat-icon
+                            class="icon-size-5"
+                            [svgIcon]="'heroicons_solid:location-marker'"
+                            matPrefix></mat-icon>
+                        <input
+                            [formControlName]="'state'"
+                            matInput>
+                    </mat-form-field>
+                </div>
+
+                <!-- Company Country -->
+                <div class="sm:col-span-2">
+                    <mat-form-field class="fuse-mat-no-subscript w-full">
+                        <mat-label>Country</mat-label>
+                        <mat-icon
+                            class="icon-size-5"
+                            [svgIcon]="'heroicons_solid:location-marker'"
+                            matPrefix></mat-icon>
+                        <mat-select [formControlName]="'country'">
+                            <mat-option [value]="'USA'">United States</mat-option>
+                            <mat-option [value]="'CANADA'">Canada</mat-option>
+                            <mat-option [value]="'MEXICO'">Mexico</mat-option>
+                            <mat-option [value]="'FRANCE'">France</mat-option>
+                            <mat-option [value]="'GERMANY'">Germany</mat-option>
+                            <mat-option [value]="'ITALY'">Italy</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+            </div>
+        </form>
+    </ng-container>
+
+    <div class="mt-4 mb-10 border-t"></div>
+
+    <!-- Actions -->
+    <div class="flex items-center justify-end">
+        <ng-container *ngIf="editMode">
             <button
                 mat-stroked-button
+                (click)="toggleEditMode(false)"
                 type="button">
                 Cancel
             </button>
@@ -173,8 +268,17 @@
                 class="ml-4"
                 mat-flat-button
                 type="button"
+                (click)="saveInformation()"
                 [color]="'primary'">Save
             </button>
-        </div>
-    </form>
+        </ng-container>
+        <ng-container *ngIf="!editMode && canEdit">
+            <button
+                mat-stroked-button
+                type="button"
+                (click)="toggleEditMode(true)">
+                Edit
+            </button>
+        </ng-container>
+    </div>
 </div>
