Committing after finally finishing the Security 'Change Password' flow

--- a/src/app/modules/admin/apps/settings/password/settings-password.component.html
+++ b/src/app/modules/admin/apps/settings/password/settings-password.component.html
@@ -1,24 +1,26 @@
 <div class="w-full max-w-3xl">
 
     <!-- Form -->
-    <form [formGroup]="securityForm">
+    <form [formGroup]="passwordChangeForm">
 
         <!-- Section -->
         <div class="w-full">
             <div class="text-xl">Change your password</div>
         </div>
         <div class="grid sm:grid-cols-4 gap-6 w-full mt-8">
-            <!-- Current password -->
+            <!-- New password -->
             <div class="sm:col-span-4">
                 <mat-form-field class="fuse-mat-no-subscript w-full">
-                    <mat-label>Current password</mat-label>
+                    <mat-label>New Password</mat-label>
                     <mat-icon
                         class="icon-size-5"
                         [svgIcon]="'heroicons_solid:key'"
                         matPrefix></mat-icon>
                     <input
-                        [formControlName]="'currentPassword'"
+                        [formControlName]="'password'"
                         type="password"
+                        [placeholder]="'Password'"
+                        [spellcheck]="false"
                         matInput>
                 </mat-form-field>
             </div>
@@ -31,7 +33,9 @@
                         [svgIcon]="'heroicons_solid:key'"
                         matPrefix></mat-icon>
                     <input
-                        [formControlName]="'newPassword'"
+                        [placeholder]="'Confirm Password'"
+                        [spellcheck]="false"
+                        [formControlName]="'confirmPassword'"
                         type="password"
                         matInput>
                 </mat-form-field>
@@ -46,14 +50,19 @@
         <div class="flex items-center justify-end">
             <button
                 mat-stroked-button
+                (click)="cancel()"
                 type="button">
                 Cancel
             </button>
             <button
-                class="ml-4"
+                #changePasswordButton
+                class="ml-2"
                 mat-flat-button
-                type="button"
-                [color]="'primary'">Save
+                [color]="'primary'"
+                [disabled]="!passwordChangeForm.valid"
+                [matTooltip]="'Change'"
+                (click)="changePassword()">
+                Change Password
             </button>
         </div>
     </form>
