--- a/src/app/modules/admin/apps/settings/settings.component.html
+++ b/src/app/modules/admin/apps/settings/settings.component.html
@@ -80,8 +80,8 @@
                             <settings-organization></settings-organization>
                         </ng-container>
                         <!-- Security -->
-                        <ng-container *ngSwitchCase="'security'">
-                            <settings-security></settings-security>
+                        <ng-container *ngSwitchCase="'password'">
+                            <settings-password></settings-password>
                         </ng-container>
                         <!-- Keys -->
                         <ng-container *ngSwitchCase="'keys'">
