Committing after cleaning up some of the unnecessary stuff

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -23,6 +23,9 @@
 <!-- Layouts with vertical navigation -->
 <!-- ----------------------------------------------------------------------------------------------------- -->
 
+<!-- Custom -->
+<custom-layout *ngIf="layout === 'custom'"></custom-layout>
+
 <!-- Classic -->
 <classic-layout *ngIf="layout === 'classic'"></classic-layout>
 
